--- a/src/content/generals/Pyrrhus.yaml
+++ b/src/content/generals/Pyrrhus.yaml
@@ -20,153 +20,153 @@ general:
             - attribute: HP
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
         - level: Blue
           buff:
             - attribute: HP
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
         - level: Purple
           buff:
             - attribute: HP
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
         - level: Orange
           buff:
             - attribute: HP
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
         - level: Gold
           buff:
             - attribute: HP
               class: Ground
               value:
-                - 4
-                - percentage
+                number: 4
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 4
-                - percentage
+                number: 4
+                unit: percentage
     - name: Annihilation
       attribute:
       - level: Green
         buff:
           - attribute: March Size Capacity
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Mounted
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Ground
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
       - level: Blue
         buff:
           - attribute: March Size Capacity
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Mounted
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Ground
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
       - level: Purple
         buff:
           - attribute: March Size Capacity
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Mounted
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Ground
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
       - level: Orange
         buff:
           - attribute: March Size Capacity
             value:
-              - 1
-              - percentage
+              number: 1
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Mounted
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Ground
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
       - level: Gold
         buff:
           - attribute: March Size Capacity
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Mounted
             value:
-              - 4
-              - percentage
+              number: 4
+              unit: percentage
           - attribute: Attack
             condition: Attacking
             class: Ground
             value:
-              - 4
-              - percentage
+              number: 4
+              unit: percentage
     - name: Ground Troop Ares
       attribute:
         - level: Green
@@ -174,86 +174,86 @@ general:
             - attribute: Attack
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
         - level: Blue
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
         - level: Purple
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
         - level: Orange
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 2
-                - percentage
+                number: 2
+                unit: percentage
         - level: Gold
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 4
-                - percentage
+                number: 4
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 4
-                - percentage
+                number: 4
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 4
-                - percentage
+                number: 4
+                unit: percentage
     - name: Pyrrhic Victory
       attribute:
         - level: Green
@@ -261,231 +261,231 @@ general:
             - attribute: Attack
               class: Ground
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
             - attribute: HP
               class: Mounted
               value:
-                - 1
-                - percentage
+                number: 1
+                unit: percentage
         - level: Blue
           buff:
           - attribute: Attack
             class: Ground
             value:
-              - 4
-              - percentage
+              number: 4
+              unit: percentage
           - attribute: Defense
             class: Ground
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: Defense
             class: Mounted
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: HP
             class: Ground
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
           - attribute: HP
             class: Mounted
             value:
-              - 2
-              - percentage
+              number: 2
+              unit: percentage
         - level: Purple
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 7
-                - percentage
+                number: 7
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: HP
               class: Mounted
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
         - level: Orange
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 7
-                - percentage
+                number: 7
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
             - attribute: HP
               class: Mounted
               value:
-                - 3
-                - percentage
+                number: 3
+                unit: percentage
         - level: Gold
           buff:
             - attribute: Attack
               class: Ground
               value:
-                - 14
-                - percentage
+                number: 14
+                unit: percentage
             - attribute: Defense
               class: Ground
               value:
-                - 6
-                - percentage
+                number: 6
+                unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                - 6
-                - percentage
+                number: 6
+                unit: percentage
             - attribute: HP
               class: Ground
               value:
-                - 6
-                - percentage
+                number: 6
+                unit: percentage
             - attribute: HP
               class: Mounted
               value:
-                - 6
-                - percentage
+                number: 6
+                unit: percentage
   ascending:
     - level: '6'
       buff:
         - attribute: Attack
           class: Ground
           value:
-            - 10
-            - percentage
+            number: 10
+            unit: percentage
         - attribute: HP
           class: Ground
           value:
-            - 10
-            - percentage
+            number: 10
+            unit: percentage
         - attribute: HP
           class: Mounted
           value:
-            - 10
-            - percentage
+            number: 10
+            unit: percentage
     - level: '7'
       buff:
         - attribute: Death to Wounded
           condition: Marching
           value:
-            - 10
-            - percentage
+            number: 10
+            unit: percentage
     - level: '8'
       buff:
         - attribute: Rally Capacity
           condition: When Rallying
           value:
-            - 8
-            - percentage
+            number: 8
+            unit: percentage
     - level: '9'
       buff:
         - attribute: Attack
           class: Mounted
           condition: Marching
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
         - attribute: Attack
           class: Ground
           condition: Marching
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
         - attribute: Defense
           class: Mounted
           condition: Marching
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
         - attribute: Defense
           class: Ground
           condition: Marching
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
     - level: '10'
       buff:
         - attribute: Attack
           class: Ground
           value:
-            - 25
-            - percentage
+            number: 25
+            unit: percentage
         - attribute: Defense
           class: Ground
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
         - attribute: HP
           class: Ground
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
   books:
     - name: Pyrrhic War
       buff:
         - attribute: Attack
           class: Ground
           value:
-            - 35
-            - percentage
+            number: 35
+            unit: percentage
         - attribute: Defense
           class: Ground
           value:
-            - 35
-            - percentage
+            number: 35
+            unit: percentage
         - attribute: HP
           class: Ground
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
         - attribute: HP
           class: Mounted
           value:
-            - 15
-            - percentage
+            number: 15
+            unit: percentage
