--- a/src/content/generals/Laudon.yaml
+++ b/src/content/generals/Laudon.yaml
@@ -12,6 +12,8 @@ general:
   stars: '10'
   level: '1'
   score_as: Mounted
+  warnings:
+    - Laudon is incompatible with the Mounted Troop Attack Level 4 Skillbook
   books:
     - name: Silesian Wars
       buff:
@@ -44,10 +46,22 @@ general:
             number: 5
             unit: percentage
         - attribute: Defense
+          class: Mounted
           value:
             number: 5
             unit: percentage
         - attribute: HP
+          class: Ground
+          value:
+            number: 5
+            unit: percentage
+        - attribute: Attack
+          class: Mounted
+          value:
+            number: 5
+            unit: percentage
+        - attribute: HP
+          class: Ground
           value:
             number: 5
             unit: percentage
@@ -60,6 +74,12 @@ general:
             unit: percentage
     - level: '8'
       buff:
+        - attribute: March_Size_Capacity
+          value:
+            number: 14
+            unit: percentage
+    - level: '9'
+      buff:
         - attribute: Attack
           class: Mounted
           value:
@@ -71,10 +91,16 @@ general:
             number: 10
             unit: percentage
         - attribute: Defense
+          class: Mounted
           value:
             number: 20
             unit: percentage
-    - level: '9'
+        - attribute: Defense
+          class: Ground
+          value:
+            number: 20
+            unit: percentage
+    - level: '10'
       buff:
         - attribute: Attack
           class: Mounted
@@ -92,6 +118,68 @@ general:
             number: 10
             unit: percentage
   specialities:
+    - name: Mounted Troop Defense
+      attribute:
+        - level: Green
+          buff:
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
     - name: Strike
       attribute:
         - level: Green
@@ -207,65 +295,90 @@ general:
               value:
                 number: 2
                 unit: percentage
-    - name: Mounted Troop Defense
+    - name: Field Marshal of Austria
       attribute:
         - level: Green
           buff:
-            - attribute: HP
+            - attribute: Attack
               class: Mounted
               value:
-                number: 1
+                number: 3
                 unit: percentage
             - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
               class: Mounted
               value:
                 number: 1
                 unit: percentage
         - level: Blue
           buff:
-            - attribute: HP
+            - attribute: Attack
               class: Mounted
               value:
-                number: 1
+                number: 4
                 unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                number: 1
+                number: 3
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
                 unit: percentage
         - level: Purple
           buff:
-            - attribute: HP
+            - attribute: Attack
               class: Mounted
               value:
-                number: 2
+                number: 7
                 unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                number: 2
+                number: 5
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 3
                 unit: percentage
         - level: Orange
           buff:
-            - attribute: HP
+            - attribute: Attack
               class: Mounted
               value:
-                number: 2
+                number: 7
                 unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                number: 2
+                number: 5
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 3
                 unit: percentage
         - level: Gold
           buff:
-            - attribute: HP
+            - attribute: Attack
               class: Mounted
               value:
-                number: 4
+                number: 14
                 unit: percentage
             - attribute: Defense
               class: Mounted
               value:
-                number: 4
+                number: 10
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 6
                 unit: percentage
