--- a/src/content/generals/Douglas_(Odyssey).yaml
+++ b/src/content/generals/Douglas_(Odyssey).yaml
@@ -14,7 +14,7 @@ general:
   level: '1'
   score_as: Archers
   books:
-    - Odyssey Skin
+    - Odyssey - Douglas
     - Blessing of Siren
   specialities:
     - Ranged Troop Assault
