--- a/src/content/generals/Raimondo_(Odyssey).yaml
+++ b/src/content/generals/Raimondo_(Odyssey).yaml
@@ -14,47 +14,8 @@ general:
   level: '1'
   score_as: Siege
   books:
-    - name: The Military Art
-      buff:
-        - attribute: Attack
-          class: Siege
-          value:
-            number: 45
-            unit: percentage
-        - attribute: Defense
-          class: Siege
-          value:
-            number: 25
-            unit: percentage
-        - attribute: Defense
-          class: Archers
-          value:
-            number: 25
-            unit: percentage
-    - name: Raimondo Odyssey
-      buff:
-        - attribute: Defense
-          class: Archers
-          value:
-            number: 10
-            unit: percentage
-        - attribute: Defense
-          class: Siege
-          value:
-            number: 10
-            unit: percentage
-        - attribute: HP
-          condition: Enemy
-          class: Archers
-          value:
-            number: -20
-            unit: percentage
-        - attribute: HP
-          condition: Enemy
-          class: Siege
-          value:
-            number: -20
-            unit: percentage
+    - The Military Art
+    - Odyssey - Raimondo
   ascending:
     - level: '6'
       buff:
@@ -117,294 +78,7 @@ general:
             number: 35
             unit: percentage
   specialities:
-    - name: Siege Machine Formation
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-    - name: Siege
-      attribute:
-        - level: Green
-          buff:
-            - attribute: March_Size_Capacity
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Archers
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: March_Size_Capacity
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Archers
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: March_Size_Capacity
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Archers
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: March_Size_Capacity
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Archers
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: March_Size_Capacity
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Attack
-              condition: Attacking
-              class: Archers
-              value:
-                number: 4
-                unit: percentage
-    - name: Siege Machine Ares
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: HP
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-    - name: Battle of Saint Gotthard
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 2
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 3
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 8
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 5
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Siege
-              value:
-                number: 16
-                unit: percentage
-            - attribute: Defense
-              class: Siege
-              value:
-                number: 10
-                unit: percentage
+    - Siege Machine Formation
+    - Siege
+    - Siege Machine Ares
+    - Battle of Saint Gotthard
